[package]
name = "cb-handlers"
edition = "2021"
license.workspace = true

[features]
default = ["lang-rust", "lang-typescript", "refactor-all"]
lang-rust = ["cb-lang-rust", "codebuddy-ast/lang-rust", "codebuddy-plugin-system/lang-rust", "cb-services/lang-rust"]
lang-typescript = ["cb-lang-typescript", "codebuddy-ast/lang-typescript", "codebuddy-plugin-system/lang-typescript", "cb-services/lang-typescript"]
lang-markdown = ["codebuddy-ast/lang-markdown", "codebuddy-plugin-system/lang-markdown", "cb-services/lang-markdown"]
analysis-dead-code = ["dep:cb-analysis-dead-code", "dep:cb-analysis-common"]
analysis-circular-deps = ["dep:cb-analysis-circular-deps", "dep:cb-analysis-graph"]
analysis-deep-dead-code = ["dep:cb-analysis-deep-dead-code", "dep:cb-analysis-common"]

# Refactoring operations - optional for faster compilation
refactor-rename = []
refactor-extract = []
refactor-inline = []
refactor-move = []
refactor-reorder = []
refactor-transform = []
refactor-delete = []
refactor-all = ["refactor-rename", "refactor-extract", "refactor-inline", "refactor-move", "refactor-reorder", "refactor-transform", "refactor-delete"]

[dependencies]
codebuddy-foundation = { path = "../codebuddy-foundation" }
cb-services = { path = "../cb-services", default-features = false }
cb-plugin-api = { path = "../cb-plugin-api" }
cb-lsp = { path = "../cb-lsp" }

# Language plugins (feature-gated, temporarily reduced to TS + Rust)
cb-lang-rust = { workspace = true, optional = true }
cb-lang-typescript = { workspace = true, optional = true }

# Analysis crates (optional)
cb-analysis-common = { path = "../../analysis/cb-analysis-common", optional = true }
cb-analysis-dead-code = { path = "../../analysis/cb-analysis-dead-code", optional = true }
cb-analysis-circular-deps = { path = "../../analysis/cb-analysis-circular-deps", optional = true }
cb-analysis-graph = { path = "../../analysis/cb-analysis-graph", optional = true }
cb-analysis-deep-dead-code = { path = "../../analysis/cb-analysis-deep-dead-code", optional = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
lsp-types = "0.97"
clap = { version = "4.0", features = ["derive"] }
toml = "0.9"
toml_edit = "0.23"
tempfile = "3.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
cb-transport = { path = "../cb-transport" }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
futures = { workspace = true }
regex = "1.10"
sha2 = "0.10"
ignore = "0.4"
url = "2.5"
globset = "0.4.10"
urlencoding = "2.1.3"
pathdiff = "0.2"
codebuddy-plugin-system = { path = "../codebuddy-plugin-system", default-features = false, features = ["runtime"] }
codebuddy-config = { path = "../codebuddy-config" }
codebuddy-workspaces = { path = "../codebuddy-workspaces" }
codebuddy-ast = { path = "../codebuddy-ast", default-features = false }
