[package]
name = "cb-lang-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Core dependencies
mill-plugin-api = { path = "../mill-plugin-api" }
mill-foundation = { path = "../mill-foundation" }

# Async operations
async-trait = { workspace = true }
tokio = { workspace = true }

# Serialization/Deserialization
serde = { workspace = true }
serde_json = { workspace = true }

# TOML and JSON parsing for manifests
toml_edit = "0.23"

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Subprocess management
tempfile = "3.10"

# Common utilities
regex = "1.10"
pathdiff = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1.0"
criterion = "0.5"
[[bench]]
name = "import_helpers_bench"
harness = false
