[package]
name = "cb-lang-go"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Codebuddy workspace dependencies
cb-plugin-api = { path = "../../cb-plugin-api" }
cb-protocol = { path = "../../cb-protocol" }
cb-lang-common = { path = "../../cb-lang-common" }

# Async operations
async-trait = { workspace = true }
tokio = { workspace = true }

# Serialization/Deserialization & Other Utilities
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1.10"
tempfile = "3.10"
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
