[package]
name = "cb-lang-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Our core plugin API
cb-plugin-api = { path = "../cb-plugin-api" }
cb-protocol = { path = "../cb-protocol" }
cb-core = { path = "../cb-core" }
cb-lang-common = { path = "../cb-lang-common" }

# For parsing Rust code
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
quote = "1.0"
tracing = { workspace = true }

# For parsing Cargo.toml files
toml_edit = "0.23"
serde = { workspace = true }
serde_json = { workspace = true }

# For refactoring operations
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

# Path utilities for workspace operations
pathdiff = "0.2"

# For async operations
async-trait = { workspace = true }
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }
