[package]
name = "cb-lang-toml"
version = "0.1.0"
edition = "2021"

[dependencies]
cb-plugin-api = { path = "../cb-plugin-api" }
cb-plugin-registry = { path = "../cb-plugin-registry" }
async-trait = "0.1"
toml_edit = "0.22"
tracing = "0.1"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.0", features = ["full"] }
