[package]
name = "cb-lang-typescript"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Core plugin API
cb-plugin-api = { path = "../cb-plugin-api" }
cb-protocol = { path = "../cb-protocol" }
cb-core = { path = "../cb-core" }
cb-lang-common = { path = "../cb-lang-common" }

# Async operations
async-trait = { workspace = true }
tokio = { workspace = true }

# Serialization/Deserialization & Other Utilities
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.10"
pathdiff = "0.2"

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
