[package]
name = "cb-lang-typescript"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Core plugin API
cb-plugin-api = { path = "../cb-plugin-api" }
cb-plugin-registry = { path = "../cb-plugin-registry" }
cb-protocol = { path = "../cb-protocol" }
cb-core = { path = "../cb-core" }
cb-lang-common = { path = "../cb-lang-common" }

# Async operations
async-trait = { workspace = true }
tokio = { workspace = true }

# Serialization/Deserialization & Other Utilities
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.10"
pathdiff = "0.2"

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# SWC for AST-based parsing (moved from cb-ast)
swc_common = "14"
swc_ecma_parser = "24"
swc_ecma_ast = "15"
swc_ecma_visit = "15"
swc_ecma_codegen = "17"

[dev-dependencies]
tokio-test = "0.4"
