[package]
name = "cb-lang-yaml"
version = "0.1.0"
edition = "2021"

[dependencies]
cb-plugin-api = { path = "../cb-plugin-api" }
cb-plugin-registry = { path = "../cb-plugin-registry" }
async-trait = "0.1"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.0", features = ["full"] }
