[package]
name = "cb-lsp"
edition = "2021"

[dependencies]
cb-types = { path = "../cb-types" }
cb-protocol = { path = "../cb-protocol" }
tokio = { workspace = true, features = ["process"] }
serde_json = { workspace = true }
serde = { workspace = true }
lsp-types = "0.97"
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
once_cell = "1.19"
codebuddy-core = { path = "../codebuddy-core" }
codebuddy-config = { path = "../codebuddy-config" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process"] }