[package]
name = "cb-plugin-api"
edition = "2021"

[build-dependencies]
serde = { workspace = true }
toml = "0.9"

[dependencies]
cb-protocol = { path = "../cb-protocol" }
cb-types = { path = "../cb-types" }
cb-core = { path = "../cb-core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "io-std"] }
tracing = { workspace = true }