[package]
name = "cb-plugin-api"
edition = "2021"
license.workspace = true

[dependencies]
codebuddy-foundation = { path = "../codebuddy-foundation" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "io-std"] }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

# Inventory for static plugin registration (Layer 0 - no upward dependencies)
inventory = "0.3"