[package]
name = "cb-plugins"
version = "1.0.0-beta"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
thiserror = { workspace = true }
indexmap = "2.0"
cb-core = { path = "../cb-core" }
cb-ast = { path = "../cb-ast" }
ignore = "0.4"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
html2md-rs = "0.10"

[dev-dependencies]
tokio-test = "0.4"
insta = { version = "1.43", features = ["yaml"] }