[package]
name = "cb-plugins"
version = "1.0.0-beta"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
thiserror = { workspace = true }
indexmap = "2.0"
cb-core = { path = "../cb-core" }
cb-ast = { path = "../cb-ast" }
cb-plugin-api = { path = "../cb-plugin-api" }
cb-protocol = { path = "../cb-protocol" }
cb-lang-rust = { path = "../languages/cb-lang-rust" }
cb-lang-go = { path = "../languages/cb-lang-go" }
cb-lang-typescript = { path = "../languages/cb-lang-typescript" }
chrono = "0.4"
ignore = "0.4"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
html2md-rs = "0.10"
url = "2.4"

[features]
default = []
mcp-proxy = []

[dev-dependencies]
tokio-test = "0.4"
insta = { version = "1.43", features = ["yaml"] }