[package]
name = "cb-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cb-types = { path = "../cb-types" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
lsp-types = "0.97" # For shared LSP-related types
chrono = { version = "0.4", features = ["serde"] }
